# metabolicpd

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  intro.html  metabolicpd.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  shell.nix  simulation_stats
.github/workflows/: sphinx.yml
_sources/: metabolicpd.rst.txt
data/: central_carbon_tb.xlsx  high_gba_12h.xlsx  minimal_example.xlsx  results.csv  simple_pd_network.xlsx  simple_pd_network_no_sinks.xlsx  simple_pd_network_no_sinks_virtual.xlsx  simple_pd_network_no_virtual_virtual.xlsx
data/kegg/: mtu01200.xml
docs/source/: conf.py  index.rst  intro.rst
metabolicpd/: example_docs.py  import_matrix.py  ptr_class.py  read_and_plot.py  simulation.py  simulator.py  symbolic_approach.py
metabolicpd/examples/: example1.py  example2.py  example3.py  example4.py  example5.py  global_sensitivity_analysis.py  local_sensitivity_analysis.py  multi_nodes_multi_runs.py  multiple_runs.py  sensitivity_analysis.py  simple_sim_example.py
metabolicpd/io/: kegg_pathway.py
metabolicpd/life/: network.py  util.py  virtual_nodes.py
tests/: test_network.py  test_simulation.py
